--- a/angular/package.json
+++ b/angular/package.json
@@ -1,27 +1,42 @@
 {
-  "name": "gttd-angular",
-  "version": "1.0.0",
-  "description": "A GTD app in angular",
-  "main": "main.js",
-  "directories": {
-    "doc": "doc"
-  },
-  "scripts": {
-    "tscwatch": "tscwatch src/*.ts --module commonjs",
-    "compile": "tsc src/*.ts --module commonjs",
-    "pretest": "tsc test/*.ts --module commonjs",
-    "test": "mocha test"
-  },
-  "keywords": [],
-  "author": "Tom George",
-  "license": "ISC",
-  "devDependencies": {
-    "mocha": "^2.4.5",
-    "mocha-loader": "^0.7.1",
-    "ts-loader": "^0.8.1",
-    "typescript-watcher": "0.0.4"
-  },
-  "dependencies": {
-    "typescript": "^1.8.9"
-  }
+	"name": "gttd-angular",
+	"version": "1.0.0",
+	"description": "A GTD app in angular",
+	"main": "main.js",
+	"directories": {
+		"doc": "doc"
+	},
+	"scripts": {
+		"tscwatch": "tscwatch src/*.ts --module commonjs",
+		"compile": "tsc src/*.ts --module commonjs",
+		"pretest": "tsc test/*.ts --module commonjs",
+		"test": "mocha test",
+		"start": "concurrently \"npm run tsc:w\" \"npm run lite\"",
+		"tsc": "tsc",
+		"lite": "lite-server",
+		"typings": "typings",
+		"postinstall": "typings install"
+	},
+	"keywords": [],
+	"author": "Tom George",
+	"license": "ISC",
+	"devDependencies": {
+		"mocha": "^2.4.5",
+		"mocha-loader": "^0.7.1",
+		"ts-loader": "^0.8.1",
+		"typescript-watcher": "0.0.4",
+		"concurrently": "^2.0.0",
+		"lite-server": "^2.1.0",
+		"typescript": "^1.8.9",
+		"typings":"^0.7.9"
+	},
+	"dependencies": {
+		"angular2": "2.0.0-beta.11",
+		"es6-promise": "^3.0.2",
+		"es6-shim": "^0.35.0",
+		"reflect-metadata": "0.1.2",
+		"rxjs": "5.0.0-beta.2",
+		"zone.js": "0.6.4",
+		"typescript": "^1.8.9"
+	}
 }
