--- a/angular/package.json
+++ b/angular/package.json
@@ -1,39 +1,76 @@
 {
-	"name": "gttd-angular",
-	"version": "1.0.0",
-	"description": "A GTD app in angular",
-	"main": "main.js",
-	"directories": {
-		"doc": "doc"
-	},
-	"scripts": {
-		"start": "concurrently \"npm run tsc:w\" \"npm run lite\" \"mocha --watch \" ",
-		"tsc": "tsc", 
-		"tsc:w": "tsc -w", 
-		"lite": "lite-server",
-		"typings": "typings",
-		"postinstall": "typings install"
-	},
-	"keywords": [],
-	"author": "Tom George",
-	"license": "ISC",
-	"devDependencies": {
-		"mocha": "^2.4.5",
-		"mocha-loader": "^0.7.1",
-		"ts-loader": "^0.8.1",
-		"typescript-watcher": "0.0.4",
-		"concurrently": "^2.0.0",
-		"lite-server": "^2.1.0",
-		"typescript": "^1.8.9",
-		"typings":"^0.7.9"
-	},
-	"dependencies": {
-		"angular2": "2.0.0-beta.11",
-		"es6-promise": "^3.0.2",
-		"es6-shim": "^0.35.0",
-		"reflect-metadata": "0.1.2",
-		"rxjs": "5.0.0-beta.2",
-		"zone.js": "0.6.4",
-		"typescript": "^1.8.9"
-	}
+  "name": "gttd-angular",
+  "version": "1.0.0",
+  "description": "A GTD app in angular",
+  "main": "main.js",
+  "directories": {
+    "doc": "doc"
+  },
+  "scripts": {
+    "build": "webpack --progress --colors --config webpack.build.js --bail -p --display-modules --display-chunks",
+    "dev": "webpack --progress --config webpack.config.js --colors --watch --display-modules --display-chunks",
+    "test": "karma start",
+    "typings": "typings",
+    "validate": "node webpack.config.js && node webpack.build.js && node webpack.test.js",
+    "postinstall": "typings install"
+  },
+  "keywords": [],
+  "author": "Tom George",
+  "license": "ISC",
+  "devDependencies": {
+    "angular-mocks": "^1.4.1",
+    "autoprefixer": "^6.0.2",
+    "babel-core": "^5.5.8",
+    "babel-eslint": "^4.1.3",
+    "babel-loader": "^5.1.4",
+    "babel-runtime": "^5.5.8",
+    "browser-sync": "^2.6.1",
+    "browser-sync-webpack-plugin": "^1.0.0",
+    "connect-modrewrite": "^0.8.2",
+    "css-loader": "^0.18.0",
+    "eslint": "^2.8.0",
+    "eslint-config-standard": "^4.4.0",
+    "eslint-loader": "^1.1.0",
+    "eslint-plugin-jasmine": "^1.5.0",
+    "eslint-plugin-standard": "^1.3.2",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
+    "html-loader": "^0.3.0",
+    "html-webpack-plugin": "^1.5.2",
+    "isparta-instrumenter-loader": "^0.2.1",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.2",
+    "karma-coverage": "^0.5.2",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.2.0",
+    "karma-sourcemap-loader": "^0.3.5",
+    "karma-spec-reporter": "0.0.20",
+    "karma-webpack": "^1.5.1",
+    "node-libs-browser": "^0.5.2",
+    "node-sass": "^3.3.3",
+    "null-loader": "^0.1.1",
+    "phantomjs": "^1.9.17",
+    "postcss-loader": "^0.6.0",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^2.0.1",
+    "style-loader": "^0.12.3",
+    "ts-loader": "^0.8.2",
+    "tsc": "^1.20150623.0",
+    "typescript": "^1.8.9",
+    "typings": "^0.7.9",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.9.11",
+    "webpack-dev-server": "^1.9.0",
+    "webpack-validator": "^1.0.2"
+  },
+  "dependencies": {
+    "angular2": "2.0.0-beta.15",
+    "es6-shim": "^0.35.0",
+    "jquery": "^2.2.3",
+    "materialize-css": "^0.97.6",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.2",
+    "systemjs": "0.19.26",
+    "zone.js": "0.6.10"
+  }
 }
