--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ node_modules/**/*.target
 node_modules/**/.deps/
 node_modules/**/build/Makefile
 node_modules/**/**/build/Makefile
+angularresources
