--- a/angular/package.json
+++ b/angular/package.json
@@ -47,6 +47,7 @@
     "karma-sourcemap-loader": "^0.3.5",
     "karma-spec-reporter": "0.0.20",
     "karma-webpack": "^1.5.1",
+    "ngtemplate-loader": "^1.3.1",
     "node-libs-browser": "^0.5.2",
     "node-sass": "^3.3.3",
     "null-loader": "^0.1.1",
