--- a/angular/package.json
+++ b/angular/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "webpack --progress --colors --config webpack.build.js --bail -p --display-modules --display-chunks",
-    "dev": "webpack --progress --config webpack.config.js --colors --watch --display-modules --display-chunks",
+    "dev": "webpack --progress --config webpack.config.js --colors --watch --display-modules --display-chunks --display-error-details",
     "dev-server": "webpack-dev-server --hot --inline --progress --colors",
     "test": "karma start",
     "typings": "typings",
@@ -56,6 +56,8 @@
     "raw-loader": "^0.5.1",
     "sass-loader": "^2.0.1",
     "style-loader": "^0.12.3",
+    "stylus": "^0.54.2",
+    "stylus-loader": "^2.0.0",
     "ts-loader": "^0.8.2",
     "tsc": "^1.20150623.0",
     "typescript": "^1.8.9",
@@ -67,8 +69,11 @@
   },
   "dependencies": {
     "angular2": "2.0.0-beta.15",
+    "angular2-materialize": "^2.0.1",
     "es6-shim": "^0.35.0",
+    "hammerjs": "^2.0.6",
     "jquery": "^2.2.3",
+    "material-icons": "^0.1.0",
     "materialize-css": "^0.97.6",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
