--- a/angular/package.json
+++ b/angular/package.json
@@ -38,6 +38,7 @@
     "file-loader": "^0.8.4",
     "html-loader": "^0.3.0",
     "html-webpack-plugin": "^1.5.2",
+    "imports-loader": "^0.6.5",
     "isparta-instrumenter-loader": "^0.2.1",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.2",
