--- a/angular/package.json
+++ b/angular/package.json
@@ -79,6 +79,7 @@
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.26",
+    "velocity": "^0.7.2",
     "zone.js": "0.6.10"
   }
 }
