--- a/angular/tsconfig.json
+++ b/angular/tsconfig.json
@@ -2,13 +2,16 @@
 	"compilerOptions": {
 		"target": "es5",
 			"module": "commonjs",
+            "moduleResolution": "node",
 			"sourceMap": true,
 			"declaration": false,
 			"outDir": "dist",
 			"rootDir": ".",
 			"emitDecoratorMetadata": true,
 			"experimentalDecorators": true,
-			"removeComments": false
+			"removeComments": false,
+            "noImplicitAny": true,
+            "suppressImplicitAnyIndexErrors": true
 	},
 		"exclude": [
 			"node_modules",
