--- a/angular/package.json
+++ b/angular/package.json
@@ -73,9 +73,12 @@
     "angular2-materialize": "^2.0.1",
     "es6-shim": "^0.35.0",
     "hammerjs": "^2.0.6",
+    "immutable": "https://registry.npmjs.org/immutable/-/immutable-3.7.6.tgz",
     "jquery": "^2.2.3",
     "material-icons": "^0.1.0",
     "materialize-css": "^0.97.6",
+    "node-uuid": "https://registry.npmjs.org/node-uuid/-/node-uuid-1.4.7.tgz",
+    "redux": "^3.5.2",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.26",
