--- a/angular/package.json
+++ b/angular/package.json
@@ -72,6 +72,7 @@
     "angular2": "2.0.0-beta.15",
     "angular2-materialize": "^2.0.1",
     "es6-shim": "^0.35.0",
+    "express": "^4.13.4",
     "hammerjs": "^2.0.6",
     "jquery": "^2.2.3",
     "material-icons": "^0.1.0",
