--- a/angular/docker-compose.yml
+++ b/angular/docker-compose.yml
@@ -2,7 +2,7 @@
 data:
     build: .
     dockerfile: docker/data/Dockerfile
-    command: echo 'ready'
+    command: echo 'Created node development data volume'
     volumes:
        - .:/home/app
        - /home/app/node_modules
@@ -14,3 +14,17 @@ app:
         - data
     ports:
         - "8080:8080"
+    links:
+        - mongo:mongo
+
+mongodata:
+    build: .
+    dockerfile: docker/mongo_data/Dockerfile
+
+mongo:
+    image: mongo:3.2.6
+    volumes_from:
+        - mongodata
+    ports:
+        - "27017:27017"
+    command: --smallfiles --rest --auth
