--- a/angular/docker-compose.yml
+++ b/angular/docker-compose.yml
@@ -14,6 +14,7 @@ app:
         - "8080:8080"
     links:
         - mongo:mongo
+        - redis:redis
 
 mongodata:
     build: .
@@ -25,4 +26,7 @@ mongo:
         - mongodata
     ports:
         - "27017:27017"
-    command: --smallfiles --rest --auth
+    command: --smallfiles --rest
+
+redis:
+    image: redis:3.2.0-alpine
