Huge effing refactor

--- a/angular/package.json
+++ b/angular/package.json
@@ -1,87 +1,89 @@
 {
-  "name": "gttd-angular",
-  "version": "1.0.0",
-  "description": "A GTD app in angular",
-  "main": "main.js",
-  "directories": {
-    "doc": "doc"
-  },
+  "name": "app",
+  "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
-    "build": "webpack --progress --colors --config webpack.build.js --bail -p --display-modules --display-chunks",
-    "dev": "webpack --progress --config webpack.config.js --colors --watch --display-modules --display-chunks --display-error-details",
-    "dev-server": "webpack-dev-server --hot --inline --progress --colors",
+    "clean": "rimraf node_modules doc dist && npm cache clean",
+    "clean-install": "npm run clean && npm install",
+    "clean-start": "npm run clean-install && npm start",
+    "watch": "webpack --watch --progress --profile --colors",
+    "build": "rimraf dist && webpack --progress --profile --bail",
+    "server": "webpack-dev-server --inline --progress --colors --port 8080",
+    "webdriver-update": "webdriver-manager update",
+    "webdriver-start": "webdriver-manager start",
+    "lint": "tslint --force \"src/**/*.ts\"",
+    "e2e": "protractor",
+    "e2e-live": "protractor --elementExplorer",
+    "pretest": "npm run lint",
     "test": "karma start",
-    "typings": "typings",
-    "validate": "node webpack.config.js && node webpack.build.js && node webpack.test.js",
-    "postinstall": "typings install"
-  },
-  "keywords": [],
-  "author": "Tom George",
-  "license": "ISC",
-  "devDependencies": {
-    "angular-mocks": "^1.4.1",
-    "autoprefixer": "^6.0.2",
-    "babel-core": "^5.5.8",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "^5.1.4",
-    "babel-runtime": "^5.5.8",
-    "browser-sync": "^2.6.1",
-    "browser-sync-webpack-plugin": "^1.0.0",
-    "connect-modrewrite": "^0.8.2",
-    "css-loader": "^0.18.0",
-    "eslint": "^2.8.0",
-    "eslint-config-standard": "^4.4.0",
-    "eslint-loader": "^1.1.0",
-    "eslint-plugin-jasmine": "^1.5.0",
-    "eslint-plugin-standard": "^1.3.2",
-    "extract-text-webpack-plugin": "^0.8.2",
-    "file-loader": "^0.8.4",
-    "html-loader": "^0.3.0",
-    "html-webpack-plugin": "^1.5.2",
-    "imports-loader": "^0.6.5",
-    "isparta-instrumenter-loader": "^0.2.1",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.13.2",
-    "karma-coverage": "^0.5.2",
-    "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.2.0",
-    "karma-sourcemap-loader": "^0.3.5",
-    "karma-spec-reporter": "0.0.20",
-    "karma-webpack": "^1.5.1",
-    "ngtemplate-loader": "^1.3.1",
-    "node-libs-browser": "^0.5.2",
-    "node-sass": "^3.3.3",
-    "null-loader": "^0.1.1",
-    "phantomjs": "^1.9.17",
-    "postcss-loader": "^0.6.0",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^2.0.1",
-    "style-loader": "^0.12.3",
-    "stylus": "^0.54.2",
-    "stylus-loader": "^2.0.0",
-    "ts-loader": "^0.8.2",
-    "tsc": "^1.20150623.0",
-    "typescript": "^1.8.9",
-    "typings": "^0.7.9",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.9.11",
-    "webpack-dev-server": "^1.9.0",
-    "webpack-validator": "^1.0.2"
+    "test-watch": "karma start --no-single-run --auto-watch",
+    "ci": "npm run e2e && npm run test",
+    "docs": "typedoc --options typedoc.json src/app/app.component.ts",
+    "start": "npm run server",
+    "postinstall": "npm run webdriver-update && typings install"
   },
   "dependencies": {
-    "angular2": "2.0.0-beta.15",
-    "angular2-materialize": "^2.0.1",
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.1",
+    "angular2-materialize": "^3.0.0",
     "es6-shim": "^0.35.0",
-    "express": "^4.13.4",
-    "hammerjs": "^2.0.6",
-    "jquery": "^2.2.3",
     "material-icons": "^0.1.0",
+    "materialize": "^1.0.0",
     "materialize-css": "^0.97.6",
-    "moment": "https://registry.npmjs.org/moment/-/moment-2.12.0.tgz",
+    "moment": "^2.13.0",
     "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "systemjs": "0.19.26",
-    "velocity": "^0.7.2",
-    "zone.js": "0.6.10"
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "0.6.12"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.3.2",
+    "codelyzer": "0.0.19",
+    "copy-webpack-plugin": "^3.0.0",
+    "css-loader": "^0.23.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.4",
+    "html-loader": "^0.4.0",
+    "html-webpack-plugin": "^2.8.1",
+    "istanbul-instrumenter-loader": "^0.2.0",
+    "jasmine-core": "^2.3.4",
+    "jasmine-spec-reporter": "^2.4.0",
+    "json-loader": "^0.5.3",
+    "karma": "0.13.22",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-mocha-reporter": "^2.0.3",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-remap-istanbul": "0.0.6",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "1.7.0",
+    "node-sass": "^3.4.2",
+    "null-loader": "0.1.1",
+    "phantomjs-prebuilt": "^2.1.4",
+    "postcss-loader": "^0.9.1",
+    "protractor": "^3.1.1",
+    "raw-loader": "0.5.1",
+    "remap-istanbul": "^0.6.4",
+    "rimraf": "^2.5.1",
+    "sass-loader": "^3.1.2",
+    "shelljs": "^0.7.0",
+    "style-loader": "^0.13.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.1.0",
+    "ts-helpers": "^1.1.1",
+    "ts-loader": "^0.8.1",
+    "tslint": "^3.4.0",
+    "tslint-loader": "^2.1.0",
+    "typedoc": "^0.3.12",
+    "typescript": "^1.8.0",
+    "typings": "^1.0.4",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.14.1"
   }
 }
