--- a/angular/docker/dev/Dockerfile
+++ b/angular/docker/dev/Dockerfile
@@ -5,4 +5,4 @@ RUN useradd -Ums /bin/false app
 ENV HOME /home/app
 USER app
 WORKDIR $HOME
-CMD ["npm", "run", "dev"]
+CMD ["npm", "run", "server"]
