--- a/angular/package.json
+++ b/angular/package.json
@@ -20,7 +20,8 @@
     "ci": "npm run e2e && npm run test",
     "docs": "typedoc --options typedoc.json src/app/app.component.ts",
     "start": "npm run server",
-    "postinstall": "npm run webdriver-update && typings install"
+    "postinstall": "npm run webdriver-update && typings install",
+    "typings": "typings install"
   },
   "dependencies": {
     "@angular/common": "2.0.0-rc.1",
@@ -49,6 +50,7 @@
     "file-loader": "^0.8.4",
     "html-loader": "^0.4.0",
     "html-webpack-plugin": "^2.8.1",
+    "imports-loader": "^0.6.5",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine-core": "^2.3.4",
     "jasmine-spec-reporter": "^2.4.0",
