Get webpack dev server to work in container, might add browser sync anyway lolz

--- a/angular/package.json
+++ b/angular/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "gttd",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -8,7 +8,7 @@
     "clean-start": "npm run clean-install && npm start",
     "watch": "webpack --watch --progress --profile --colors",
     "build": "rimraf dist && webpack --progress --profile --bail",
-    "server": "webpack-dev-server --inline --progress --colors --port 8080",
+    "server": "webpack-dev-server --inline --progress --colors --host 0.0.0.0" ,
     "webdriver-update": "webdriver-manager update",
     "webdriver-start": "webdriver-manager start",
     "lint": "tslint --force \"src/**/*.ts\"",
