Development environment is officially sex.  docker compose setup and remote sync from windows host to vagrant to host to container

--- a/angular/docker-compose.yml
+++ b/angular/docker-compose.yml
@@ -21,6 +21,8 @@ test:
     dockerfile: docker/app/test/Dockerfile
     volumes_from:
         - data
+    ports:
+        - "9876:9876"
 
 mongodata:
     build: .
