--- a/angular/package.json
+++ b/angular/package.json
@@ -7,7 +7,7 @@
     "clean-install": "npm run clean && npm install",
     "clean-start": "npm run clean-install && npm start",
     "watch": "webpack --watch --progress --profile --colors",
-    "build": "rimraf dist && webpack --progress --profile --bail",
+    "build": "rimraf dist && webpack --progress --profile --bail --display-chunks --display-modules --colors",
     "server": "webpack-dev-server --inline --progress --colors --host 0.0.0.0" ,
     "webdriver-update": "webdriver-manager update",
     "webdriver-start": "webdriver-manager start",
