--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 // Place your settings in this file to overwrite default and user settings.
 {
     // Specifies the folder path containing the tsserver and lib*.d.ts files to use.
-    "typescript.tsdk": "C:\\Users\\Tom\\AppData\\Roaming\\npm\\node_modules\\typescript\\lib",
+    "typescript.tsdk": "C:/Users/tgeorge/AppData/Roaming/npm/node_modules/typescript/lib",
 
     // Complete functions with their parameter signature.
-    "typescript.useCodeSnippetsOnMethodSuggest": false,
+    "typescript.useCodeSnippetsOnMethodSuggest": true,
 
     // Enable / disable TypeScript validation
     "typescript.validate.enable": true,
