--- a/angular/package.json
+++ b/angular/package.json
@@ -9,7 +9,7 @@
     "watch": "webpack --watch --progress --profile --colors",
     "build": "rimraf dist && webpack --progress --profile --bail --display-chunks --display-modules --colors",
     "server": "webpack-dev-server --inline --progress --colors --display-modules --history-api-fallback --host 0.0.0.0",
-    "dev": "webpack-dev-server --inline --progress --colors --display-modules --history-api-fallback --host 0.0.0.0" ,
+    "dev": "webpack-dev-server --inline --progress --colors --display-modules --history-api-fallback --host 0.0.0.0",
     "webdriver-update": "webdriver-manager update",
     "webdriver-start": "webdriver-manager start",
     "lint": "tslint --force \"src/**/*.ts\"",
@@ -41,11 +41,12 @@
     "redux": "^3.4.0",
     "redux-actions": "^0.9.1",
     "redux-logger": "^2.6.1",
-    "reflect-metadata": "0.1.2",
+    "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "0.6.12"
   },
   "devDependencies": {
+    "angular2-in-memory-web-api": "0.0.11",
     "autoprefixer": "^6.3.2",
     "browser-sync": "^2.12.12",
     "browser-sync-webpack-plugin": "^1.0.3",
