--- a/angular/package.json
+++ b/angular/package.json
@@ -38,10 +38,11 @@
     "materialize": "^1.0.0",
     "materialize-css": "^0.97.6",
     "moment": "^2.13.0",
+    "ng2-redux": "^3.0.5",
     "redux": "^3.4.0",
     "redux-actions": "^0.9.1",
     "redux-logger": "^2.6.1",
-    "reflect-metadata": "0.1.3",
+    "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "0.6.12"
   },
