--- a/angular/docker-compose.yml
+++ b/angular/docker-compose.yml
@@ -1,40 +1,60 @@
----
-data:
-    build: .
-    dockerfile: docker/data/Dockerfile
-    volumes:
-       - .:/home/app
+version: '2'
+services:
+    api_data:
+        build: 
+            context: ./api
+            dockerfile: docker/api/data/Dockerfile
+        volumes:
+           - .:/home/api
+    api:
+       build:  
+           context: .
+           dockerfile: docker/api/api/Dockerfile
+       ports:
+           - "3000:3000"
+       volumes_from:
+           - api_data
 
-app:
-    build: .
-    dockerfile: docker/app/dev/Dockerfile
-    volumes_from:
-        - data
-    ports:
-        - "8080:8080"
-    links:
-        - mongo:mongo
-        - redis:redis
+    data:
+        build: 
+            context: .
+            dockerfile: docker/data/Dockerfile
+        volumes:
+           - .:/home/app
 
-test:
-    build: .
-    dockerfile: docker/app/test/Dockerfile
-    volumes_from:
-        - data
-    ports:
-        - "9876:9876"
+    app:
+        build: 
+            context: .
+            dockerfile: docker/app/dev/Dockerfile
+        volumes_from:
+            - data
+        ports:
+            - "8080:8080"
 
-mongodata:
-    build: .
-    dockerfile: docker/mongo_data/Dockerfile
+    test:
+        build: 
+            context: .
+            dockerfile: docker/app/test/Dockerfile
+        volumes_from:
+            - data
+        ports:
+            - "9876:9876"
+        external_links:
+            - api_api:api
 
-mongo:
-    image: mongo:3.2.6
-    volumes_from:
-        - mongodata
-    ports:
-        - "27017:27017"
-    command: --smallfiles --rest
 
-redis:
-    image: redis:3.2.0-alpine
+    mongodata:
+        build: 
+            context: .
+            dockerfile: docker/mongo_data/Dockerfile
+
+    mongo:
+        image: mongo:3.2.6
+        volumes_from:
+            - mongodata
+        ports:
+            - "27017:27017"
+        command: --smallfiles --rest
+
+    redis:
+        image: redis:3.2.0-alpine
