--- a/angular/package.json
+++ b/angular/package.json
@@ -31,6 +31,7 @@
     "@angular/http": "2.0.0-rc.1",
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "^2.0.0-rc.1",
     "@angular/router-deprecated": "2.0.0-rc.1",
     "angular2-materialize": "^3.0.0",
     "es6-shim": "^0.35.0",
@@ -39,6 +40,7 @@
     "materialize-css": "^0.97.6",
     "moment": "^2.13.0",
     "ng2-redux": "^3.0.5",
+    "ng2-redux-router": "0.0.5",
     "redux": "^3.4.0",
     "redux-actions": "^0.9.1",
     "redux-logger": "^2.6.1",
