--- a/angular/api/docker/api/api/Dockerfile
+++ b/angular/api/docker/api/api/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:4.4.5
 MAINTAINER Tom George <tg82490@gmail.com>
 
-RUN useradd -Ums /bin/false app
-ENV HOME=/home/app
-USER app
+RUN useradd -Ums /bin/false api
+ENV HOME=/home/api
+USER api
 WORKDIR $HOME
 
 CMD ["npm", "run", "start"]
