--- a/angular/api/package.json
+++ b/angular/api/package.json
@@ -17,7 +17,7 @@
     "test-watch": "karma start --no-single-run --auto-watch",
     "ci": "npm run e2e && npm run test",
     "docs": "typedoc --options typedoc.json src/app/app.component.ts",
-    "start": "node dist/src/main/api/index.js",
+    "start": "gulp serve",
     "postinstall": "typings install",
     "typings": "typings install"
   },
@@ -51,6 +51,7 @@
     "gulp": "^3.9.1",
     "gulp-debug": "^2.1.2",
     "gulp-inject": "^4.1.0",
+    "gulp-notify": "^2.2.0",
     "gulp-rimraf": "^0.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-tslint": "^5.0.0",
