--- a/angular/api/package.json
+++ b/angular/api/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "browser-sync": "^2.13.0",
+    "codelyzer": "0.0.23",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-debug": "^2.1.2",
