--- a/angular/package.json
+++ b/angular/package.json
@@ -7,9 +7,9 @@
     "clean-install": "npm run clean && npm install",
     "clean-start": "npm run clean-install && npm start",
     "watch": "webpack --watch --progress --profile --colors",
-    "build": "rimraf dist && webpack --progress --profile --bail --display-chunks --display-modules --colors",
+    "build": "rimraf dist && webpack --progress --profile --bail --display-chunks --colors",
     "server": "webpack-dev-server --inline --progress --colors --display-modules --history-api-fallback --host 0.0.0.0",
-    "dev": "webpack-dev-server --inline --progress --colors --display-modules --history-api-fallback --host 0.0.0.0",
+    "dev": "webpack-dev-server --progress --output-pathinfo --history-api-fallback --host 0.0.0.0",
     "webdriver-update": "webdriver-manager update",
     "webdriver-start": "webdriver-manager start",
     "lint": "tslint --force \"src/**/*.ts\"",
@@ -20,69 +20,73 @@
     "test-watch": "karma start --no-single-run --auto-watch",
     "ci": "npm run e2e && npm run test",
     "docs": "typedoc --options typedoc.json src/app/app.component.ts",
-    "start": "npm run server",
-    "postinstall": "typings install",
-    "typings": "typings install"
+    "start": "npm run server"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.2",
-    "@angular/compiler": "2.0.0-rc.2",
-    "@angular/core": "2.0.0-rc.2",
-    "@angular/http": "2.0.0-rc.2",
-    "@angular/platform-browser": "2.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.2",
-    "@angular/router": "3.0.0-alpha.7",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "^2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/platform-server": "2.0.0",
+    "@angular/router": "3.0.0",
     "angular2-jwt": "^0.1.16",
-    "angular2-materialize": "^3.0.0",
-    "es6-shim": "^0.35.0",
-    "material-icons": "^0.1.0",
-    "materialize": "^1.0.0",
-    "materialize-css": "^0.97.6",
+    "angular2-materialize": "^5.1.4",
+    "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "jquery": "^2.2.4",
+    "material-design-lite": "^1.2.1",
+    "materialize-css": "^0.97.7",
     "moment": "^2.13.0",
-    "ng2-redux": "^3.0.5",
-    "ng2-redux-router": "0.0.5",
-    "redux": "^3.4.0",
-    "redux-actions": "^0.9.1",
-    "redux-logger": "^2.6.1",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.12"
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "~0.6.17"
   },
   "devDependencies": {
-    "angular2-in-memory-web-api": "0.0.11",
+    "@types/core-js": "^0.9.28",
+    "@types/hammerjs": "^2.0.28",
+    "@types/jasmine": "^2.2.29",
+    "@types/node": "^6.0.38",
+    "@types/protractor": "^1.5.16",
+    "@types/selenium-webdriver": "^2.44.26",
+    "@types/source-map": "^0.1.26",
+    "@types/uglify-js": "^2.0.27",
+    "@types/webpack": "^1.12.29",
+    "angular2-in-memory-web-api": "^0.0.20",
     "autoprefixer": "^6.3.2",
-    "browser-sync": "^2.12.12",
-    "browser-sync-webpack-plugin": "^1.0.3",
-    "codelyzer": "0.0.19",
+    "awesome-typescript-loader": "^2.2.4",
+    "codelyzer": "^0.0.28",
     "copy-webpack-plugin": "^3.0.0",
-    "css-loader": "^0.23.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.4",
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "file-loader": "^0.9.0",
     "html-loader": "^0.4.0",
     "html-webpack-plugin": "^2.8.1",
     "imports-loader": "^0.6.5",
-    "istanbul-instrumenter-loader": "^0.2.0",
+    "istanbul-instrumenter-loader": "^1.0.0",
     "jasmine-core": "^2.3.4",
     "jasmine-spec-reporter": "^2.4.0",
     "json-loader": "^0.5.3",
-    "karma": "0.13.22",
-    "karma-chrome-launcher": "^1.0.1",
+    "karma": "1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "^2.0.3",
     "karma-phantomjs-launcher": "^1.0.0",
-    "karma-remap-istanbul": "0.0.6",
+    "karma-remap-istanbul": "0.2.1",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "1.7.0",
+    "karma-webpack": "^1.8.0",
     "node-sass": "^3.4.2",
     "null-loader": "0.1.1",
     "phantomjs-prebuilt": "^2.1.4",
-    "postcss-loader": "^0.9.1",
-    "protractor": "^3.1.1",
+    "postcss-loader": "^0.13.0",
+    "protractor": "^4.0.8",
     "raw-loader": "0.5.1",
     "remap-istanbul": "^0.6.4",
     "rimraf": "^2.5.1",
-    "sass-loader": "^3.1.2",
+    "sass-loader": "^4.0.2",
     "shelljs": "^0.7.0",
     "style-loader": "^0.13.0",
     "stylus": "^0.54.5",
@@ -91,11 +95,10 @@
     "ts-loader": "^0.8.1",
     "tslint": "^3.4.0",
     "tslint-loader": "^2.1.0",
-    "typedoc": "^0.3.12",
-    "typescript": "^1.8.0",
-    "typings": "^1.0.4",
+    "typedoc": "^0.4.5",
+    "typescript": "2.0.2",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^2.1.0-beta.22",
+    "webpack-dev-server": "^2.1.0-beta.2"
   }
 }
